# Stacklume

./: .env.example  .env.vercel  .gitignore  .mailmap  .vercelignore  CLAUDE.md  DESKTOP_BUILD.md  LICENSE  README.md  drizzle.config.ts  drizzle.sqlite.config.ts  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  playwright.stickers.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  stacklume-dev.db-shm  stacklume-dev.db-wal  vercel.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: test.yml
assets/: stacklume_mesh_3D_icon.glb
assets/extension/: STORE_INFO.md  generate_frames.py
assets/extension-en/: STORE_INFO.md  generate_en.py
dist-placeholder/: index.html
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ENVIRONMENT.md  PAGINATION_IMPLEMENTATION.md  PAGINATION_SUMMARY.md
docs/security/: SECURITY_CHECKLIST.md  SSRF_PROTECTION_SUMMARY.md
docs/testing/: INSTALL_TESTS.md  TESTING_SETUP.md  TEST_SUMMARY.md
docs/widgets/: BEZIER_WIDGET_INTEGRATION.md  CSS_FILTER_WIDGET_COMPLETE.md  CSS_FILTER_WIDGET_UPDATES.md  DAMAGE_CALCULATOR_INTEGRATION.md  FRAME_RATE_WIDGET_CHANGES.md  GLASSMORPHISM_WIDGET_ADDITIONS.md  MANUAL_ADDITIONS_FOR_CSS_TRANSFORM.md  NOISE_GENERATOR_INTEGRATION.md  PARTICLE_SYSTEM_INTEGRATION_GUIDE.md  SKILL_TREE_INTEGRATION.md  TYPOGRAPHY_WIDGET_SETUP.md  WIDGET_MIGRATION_GUIDE.md  WIDGET_SYSTEM.md  WIDGET_SYSTEM_INDEX.md
drizzle/: 0000_overconfident_captain_stacy.sql  0001_curious_retro_girl.sql  0002_lumpy_quasar.sql  0003_sour_whirlwind.sql  0004_milky_hairball.sql  0004_yielding_energizer.sql  0005_links_personal_fields.sql
drizzle-sqlite/: 0000_milky_jack_murdock.sql
e2e/: links.spec.ts  login-check.spec.ts  smoke.spec.ts  stickers-desanclaje.spec.ts  stickers-flow.spec.ts  stickers.spec.ts
extension/: PERMISSIONS.md  background.js  content.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  privacy.html
public/: extension-privacy.html  manifest.json  sw.js
scripts/: add-i18n-keys.mjs  build-desktop.mjs  build-extension.mjs  build-release.mjs  check-i18n.mjs  dev-tauri.mjs  download-llama.mjs  generate-icons.mjs  generate-installer-images.mjs  generate-nsis-assets.mjs  i18n-keys-layout.json  i18n-keys-modals.json  i18n-keys-ui.json  i18n-keys-widgets1.json  i18n-keys-widgets2.json  i18n-keys-widgets7.json  i18n-keys-widgets7b.json  merge-i18n-keys.mjs  verify-widget-system.ts
src/: instrumentation.ts  middleware.ts  proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: lib.rs  main.rs
(+505 files in other folders)
